2008-10-03  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (assignN): Do not call maybe_delete_elements when
	for empty matrix.

2008-09-30  Jaroslav Hajek <highegg@gmail.com>

	* oct-inttypes.h: Mostly rewrite. 
	* oct-inttypes.cc: Modstly rewrite.

2008-09-29  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::maybe_delete_elements_2(idx_vector&)): Return on
	empty index vector.

2008-09-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (assign1, assign2, assignN): Do not call
	maybe_delete_elements.
	(maybe_delete_elements (Array<idx_vector>&)): Call the 1D and 2D
	special handlers if possible.
	* Sparse.cc (assign1, assign2, assignN): Do not call
	maybe_delete_elements.

2008-09-22  Brian Gough  <bjg@gnu.org>

	* oct-rand.cc (initialize_mersenne_twister): Use separate
	initializations for each generator to avoid correlation.

2008-09-12  Jaroslav Hajek  <highegg@gmail.com>
 
 	* oct-inttypes.h (pow (const octave_int<T>&, const octave_int<T>&)): 

2008-09-19  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign1, assign2, assignN):
	Clear lhs index before throwing error.
	(Array<T>::value): Clear index before throwing error.

2008-09-18  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (maybe_delete_elements_2 (idx_vector&)): Fix tests to get
	better Matlab compatibility.
	(maybe_delete_elements (idx_vector&, idx_vector&)): Fix tests to get
	better Matlab compatibility, simplify, gripe on invalid 2-D deletion.

2008-09-18  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::coerce): Use octave_idx_type instead of int.

2008-09-12  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.h (pow (const octave_int<T>&, const octave_int<T>&)): 
	Handle negative exponent correctly.

2008-08-19  David Bateman  <dbateman@free.fr>

	* oct-inttypes.h (template <class T1, class T2> inline T2
	octave_int_fit_to_range (const T1&, const T2&, const T2&),
	template <typename T> inline T octave_int_fit_to_range (const